Ensure that review panel elements are above, z-index-wise, Ace elements.

--- a/services/web/public/stylesheets/app/editor/review-panel.less
+++ b/services/web/public/stylesheets/app/editor/review-panel.less
@@ -111,7 +111,7 @@
 	border-left: solid 1px @rp-border-grey;
 	font-size: @rp-base-font-size;
 	color: @rp-type-blue;
-	z-index: 4; // 3 is Ace's gutter z-index value.
+	z-index: 6;
 }
 
 .review-panel-toolbar {
